--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.moon</groupId>
-    <artifactId>moon-parent</artifactId>
+    <groupId>com.sun</groupId>
+    <artifactId>sun-parent</artifactId>
     <name>${project.artifactId}</name>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
-        <module.war.name>moon</module.war.name>
+        <module.war.name>sun</module.war.name>
         <module.version>1.0-SNAPSHOT</module.version>
         <!--实现性-->
         <fastjson.version>1.2.6</fastjson.version>
@@ -30,6 +30,15 @@
         <xstream-version>1.4.7</xstream-version>
         <quartz-version>2.2.2</quartz-version>
         <poi-version>3.12</poi-version>
+
+
+        <jetty.version>7.0.0.pre5</jetty.version>
+        <zkclient.version>0.5</zkclient.version>
+        <dubbo.version>2.5.3</dubbo.version>
+        <hessian.version>4.0.38</hessian.version>
+        <curator-framework.version>1.3.3</curator-framework.version>
+        <jetty-util.version>7.0.0.pre5</jetty-util.version>
+
     </properties>
 
 
@@ -37,6 +46,64 @@
 
         <dependencies>
 
+            <dependency>
+                <groupId>com.moon</groupId>
+                <artifactId>moon-api</artifactId>
+                <version>1.0-SNAPSHOT</version>
+
+            </dependency>
+
+
+            <!-- dubbo  start-->
+            <dependency>
+                <groupId>org.apache.zookeeper</groupId>
+                <artifactId>zookeeper</artifactId>
+                <version>3.4.7</version>
+            </dependency>
+            <dependency>
+                <groupId>com.caucho</groupId>
+                <artifactId>hessian</artifactId>
+                <version>${hessian.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>3.15.0-GA</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>jetty</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>jetty-util</artifactId>
+                <version>${jetty-util.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.netflix.curator</groupId>
+                <artifactId>curator-framework</artifactId>
+                <version>${curator-framework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.101tec</groupId>
+                <artifactId>zkclient</artifactId>
+                <version>${zkclient.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>dubbo</artifactId>
+                <version>${dubbo.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+
+            <!-- dubbo end -->
             <dependency>
                 <groupId>redis.clients</groupId>
                 <artifactId>jedis</artifactId>
@@ -489,13 +556,8 @@
 
     </build>
     <modules>
-        <module>moon-base</module>
-        <module>moon-thread</module>
-        <module>moon-spring</module>
-        <module>moon-common</module>
-        <module>moon-dao</module>
-        <module>moon-service</module>
-        <module>moon-web</module>
+        <module>sun-service</module>
+
     </modules>
 
 </project>
