--- a/pom.xml
+++ b/pom.xml
@@ -390,24 +390,33 @@
             </plugin>
 
 
-            <!--<plugin>-->
-            <!--<groupId>org.codehaus.mojo</groupId>-->
-            <!--<artifactId>properties-maven-plugin</artifactId>-->
-            <!--<version>1.0-alpha-2</version>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<phase>initialize</phase>-->
-            <!--<goals>-->
-            <!--<goal>read-project-properties</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-            <!--<files>-->
-            <!--<file>${user.dir}/${profile.file.name}</file>-->
-            <!--</files>-->
-            <!--</configuration>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.basepom.maven</groupId>
+                <artifactId>duplicate-finder-maven-plugin</artifactId>
+                <version>1.1.0</version>
+                <executions>
+                    <execution>
+                        <id>default</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <skip>false</skip>
+                    <quiet>false</quiet>
+                    <checkCompileClasspath>true</checkCompileClasspath>
+                    <checkRuntimeClasspath>true</checkRuntimeClasspath>
+                    <checkTestClasspath>true</checkTestClasspath>
+                    <failBuildInCaseOfDifferentContentConflict>false</failBuildInCaseOfDifferentContentConflict>
+                    <failBuildInCaseOfEqualContentConflict>false</failBuildInCaseOfEqualContentConflict>
+                    <failBuildInCaseOfConflict>false</failBuildInCaseOfConflict>
+                    <printEqualFiles>false</printEqualFiles>
+                    <preferLocal>true</preferLocal>
+
+                </configuration>
+            </plugin>
 
 
         </plugins>
